3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove Crossedit, replaced by Gridarta. See http://sourceforge.net/projects/gridarta
for more information.
Removed paths:
 crossedit
 test/unit/crossedit
Modified paths:
 acinclude.m4 configure.ac Makefile.am
 include/autoconf.h.in define.h global.h object.h
 common/button.c init.c loader.l map.c object.c
 server/init.c login.c
 test/bugs/bugtrack/check_1727944.c
 test/unit/Makefile.am
Nicolas Weeger 2007-06-13

Add some unit tests.
 test/unit/server/check_c_object.c Makefile.am
 test/unit/common/check_object.c
Nicolas Weeger 2007-06-13

Tentative optimizations, shouldn't cause issues but need testing.
 common/object.c: fix_object() doesn't need to be called all the time.
 server/c_object.c: why is player/monster removed then inserted? if special case,
  please document why
Nicolas Weeger 2007-06-10

Partial fix for #1735275: Server sends incorrect spell info data.
 server/login.c: send spell before calling fix_object() which updates spells.
Nicolas Weeger 2007-06-10

Tentative fix for #1735272: Server sends invalid item tags
 server/plugins.c: don't send invisible objects, they're never sent to the client.
Nicolas Weeger 2007-06-10

test/bugs/bugtrack/check_1727944.c: fix ininitialized variable, reduce # of tests
 as the test isn't that meaningful.
Nicolas Weeger 2007-06-10

Disable unimplemented tests, remove quests tests.
 test/unit/common/Makefile.am
 test/unit/common/check_quest.c: removed
 test/unit/random_maps/Makefile.am
 test/unit/server/Makefile.am
 test/unit/socket/Makefile.am
Nicolas Weeger 2007-06-10

Fix accidentally broken unit test.
 test/unit/common/check_arch.c: use correct type/subtype.