@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1735464: Reset command does not accept relative names.
+ server/c_wiz.c
+Nicolas Weeger 2007-06-16
+
 Remove Crossedit, replaced by Gridarta. See http://sourceforge.net/projects/gridarta
 for more information.
 Removed paths:
